[package]
name = "my-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["api-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
crossbeam-channel = "0.5.0"
git2 = "0.13.22"
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
